implement builder pattern for Movie class and refactor test cases accordingly